<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Aplicatii"
    android:background="@drawable/fundalaplicati2">

        <Button
            android:id="@+id/ecgr2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonaplicatii"
            android:text="@string/ecua_ie_de_gradul_2"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/deter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="30sp"
            android:text="@string/determinant"
            android:background="@drawable/buttonaplicatii"
            android:layout_below="@+id/ecgr2"
            />

    <Button
        android:id="@+id/grafice"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="30sp"
        android:text="@string/grafice"
        android:background="@drawable/buttonaplicatii"
        android:layout_below="@+id/deter"
        />
</RelativeLayout>