<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ec_gr_2"
    android:background="@drawable/fundalaplicati"
    >
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginEnd="13dp"
    android:layout_marginStart="10dp"
    >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:hint="@string/a1"
        android:autofillHints=""
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:textSize="30sp"
        android:maxLength="3"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:hint="@string/b"
        android:autofillHints=""
        android:layout_marginTop="15dp"
        android:layout_marginStart="60dp"
        android:textSize="30sp"
        android:maxLength="3"

        />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:hint="@string/c"
        android:autofillHints=""
        android:textSize="30sp"
        android:maxLength="3"
        android:layout_marginTop="15dp"
        android:layout_marginStart="60dp"
        />
</LinearLayout>
</RelativeLayout>